# ctf-font-decode

./: .gitignore  README.md  index.html  pyproject.toml
ctf_font_decode/: __init__.py  cli.py
web/: index.html
